CSS/styles.css
@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400;1,500;1,700&family=Ruda:wght@800&display=swap");
/*Global styling*/
* {
  box-sizing: border-box;
}
body {
  display: block;
  margin: auto;
  background-color: #53a8b6;
}

/* Reminder that .class #id */
#profile {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 500px;
  height: auto;
  border-radius: 30px;
}
#About-me {
  display: block;
  text-align: center;
}
/*Journey Banner*/
.journey-column {
  float: left;
  width: 33.33%;
  padding: 5px;
}

.journey-row {
  margin: auto;
  content: "";
  display: table;
  clear: both;
  position: sticky;
  background-color: #79c2d0;
  border-radius: 3%;
  overflow: hidden;
}
#Chef,
#LWT,
#bay {
  height: auto;
  width: 645px;
  height: 537px;
  border-radius: 30%;
}
/*Interests & hobbies*/
ul {
  display: inline-block;
  text-align: center;
  margin-left: 50px;
}

/*Projects Section*/
#projects {
  margin: 0px;
  padding: 0px;
  font-family: "Nunito Sans", sans-serif;
  display: flex;
  justify-content: center;
  height: 100vh;
  background: plum;
  align-items: center;
}
.container {
  display: flex;
}
.card {
  height: 500px;
  margin: 50px;
  box-shadow: 5px 5px 20px #2d3053;
  overflow: hidden;
}

.egg,
.Generation {
  height: 500px;
  width: 450px;
  border-radius: 3px;
}

.intro {
  height: 200px;
  width: 350px;
  padding: 6px;
  box-sizing: border-box;
  position: absolute;
  background: #5585b5;
  color: rgb(33, 14, 120);
}
h3 {
  margin: 10px;
  font-size: 40px;
}
#pro-desc {
  font-size: 20px;
  margin: 20px;
}

